<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/summary"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/summary" />
    <item
        android:id="@+id/upcoming"
        android:enabled="true"
        android:icon="@drawable/baseline_format_list_numbered_24"
        android:title="@string/Upcoming_Bills" />
    <item
        android:id="@+id/paid"
        android:enabled="true"
        android:icon="@drawable/baseline_payment_24"
        android:title="@string/Paid_Bills"/>
    <item
        android:id="@+id/settings"
        android:checkable="false"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/Settings" />

</menu>