<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddBillActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbarAddBill"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_bill"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="24dp" />


    </com.google.android.material.appbar.MaterialToolbar>

    <EditText
        android:id="@+id/etName"
        android:layout_width="270dp"
        android:layout_height="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="138dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        android:fontFamily="@font/signika_negative_regular_ttf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbarAddBill"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="270dp"
        android:layout_height="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="127dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="68dp"
        android:text="@string/frequency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAmount" />

    <Spinner
        android:id="@+id/spFrequency"
        android:layout_width="260dp"
        android:layout_height="59dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toTopOf="@+id/spDueDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvFrequency"
        app:layout_constraintTop_toBottomOf="@+id/etAmount" />

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="70dp"
        android:text="Due Date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFrequency" />

    <Spinner
        android:id="@+id/spDueDate"
        android:layout_width="252dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        app:layout_constraintStart_toEndOf="@+id/tvDueDate"
        app:layout_constraintTop_toBottomOf="@+id/spFrequency" />


    <DatePicker
        android:id="@+id/dpDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="28dp"
        android:visibility="gone"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toEndOf="@id/tvDueDate"
        tools:layout_editor_absoluteY="255dp" />

    <Button
        android:id="@+id/btnsavebill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="200dp"
        android:text="@string/save_bill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spDueDate" />

</androidx.constraintlayout.widget.ConstraintLayout>